<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="@string/group_general_key"
        android:title="@string/group_general_title">
        <ListPreference
            android:icon="@drawable/ic_earth_grey600_24dp"
            android:key="@string/list_preference_country_code_key"
            android:title="@string/title_list_preference" />
        <SwitchPreference
            android:defaultValue="@bool/default_show_notification"
            android:key="@string/switch_preference_notification_key"
            android:summary="@string/summary_switch_preference" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/group_about_key"
        android:title="@string/group_about_title">
        <Preference
            android:icon="@drawable/ic_github_circle_grey600_24dp"
            android:key="@string/preference_source_key"
            android:summary="@string/preference_source_summary"
            android:title="@string/preference_source_title" />
        <Preference
            android:icon="@drawable/ic_account_grey600_24dp"
            android:key="@string/preference_author_key"
            android:summary="@string/preference_author_summary"
            android:title="@string/preference_author_title" />
        <Preference
            android:icon="@drawable/ic_certificate_grey600_24dp"
            android:key="@string/preference_licence_key"
            android:summary="@string/preference_licence_summary"
            android:title="@string/preference_licence_title" />
        <Preference
            android:icon="@drawable/ic_spotify_grey600_24dp"
            android:key="@string/preference_version_key"
            android:selectable="false"
            android:summary="@string/preference_version_summary"
            android:title="@string/preference_version_title" />
    </PreferenceCategory>

</PreferenceScreen>