<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:clickable="true"
    android:windowSoftInputMode="stateAlwaysHidden"
    android:padding="@dimen/fragment_player_padding">

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fragment_player_layout_margin_bottom_small"
        android:gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <TextView
        android:id="@+id/album_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <ImageView
        android:id="@+id/album_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/fragment_player_layout_margin_bottom_big"
        android:layout_marginTop="@dimen/fragment_player_layout_margin_top"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/album_image_content_description" />

    <TextView
        android:id="@+id/track_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/scrub_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fragment_player_layout_margin_bottom_small"
        android:layout_marginTop="@dimen/fragment_player_layout_margin_top">

        <SeekBar
            android:id="@+id/scrub_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false" />

        <TextView
            android:id="@+id/current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/scrub_bar"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/scrub_bar" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/playback_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/previous_button_content_description"
            android:minHeight="@dimen/fragment_player_image_button"
            android:minWidth="@dimen/fragment_player_image_button"
            android:src="@android:drawable/ic_media_previous" />

        <ImageButton
            android:id="@+id/play_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play_pause_button_content_description"
            android:minHeight="@dimen/fragment_player_image_button"
            android:minWidth="@dimen/fragment_player_image_button"
            android:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next_button_content_description"
            android:minHeight="@dimen/fragment_player_image_button"
            android:minWidth="@dimen/fragment_player_image_button"
            android:src="@android:drawable/ic_media_next" />

    </LinearLayout>

</LinearLayout>